namespace ClearEyeQ.Identity.Domain.Enums;

public enum AccountStatus
{
    PendingVerification = 0,
    Active = 1,
    Suspended = 2,
    Deleted = 3
}
