namespace ClearEyeQ.Identity.Domain.Enums;

public enum Role
{
    Patient = 0,
    Clinician = 1,
    Admin = 2
}
